<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name_prod">Unblocker for Wikipedia</string>
    <string name="mesaju">This application is forked from official Wikipedia application(version 2.7.225-r-2018-02-06) in order to reach Wikipedia content through vikiansiklopedi.org. The user is responsible for the viewed pages. This application and vikiansiklopedi.org are not affiliated to Wikimedia Foundation. </string>
    <string name="hakki">About Unblocker for Wikipedia¯\\_(ツ)_/¯</string>
    <string name="about_description">About Unblocker for Wikipedia</string>
    <string name="about_app_license"><![CDATA[Source code of this app is available on <a href=\"https://github.com/vikiengelkaldir/vek\">GitHub</a> under the <a href=\"https://raw.githubusercontent.com/vikiengelkaldir/vek/master/COPYING\">Apache 2.0 License</a>. Unless otherwise specified, content on Wikipedia is available under a <a href=\"https://en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License\">Creative Commons Attribution-ShareAlike License</a>.]]></string>
    <string name="preference_title_language">Content language</string>
    <string name="search_hint">Search</string>
    <string name="app_name_beta" tools:ignore="UnusedResources">Wikipedia Beta</string>
    <string name="app_name_alpha" tools:ignore="UnusedResources">Wikipedia Alpha</string>
    <string name="wikimedia">Wikimedia</string>
    <string name="search_hint_search_history">Search history</string>
    <string name="search_hint_search_my_lists">Search my lists</string>
    <string name="search_hint_search_reading_list">Search reading list</string>
    <string name="nav_item_history">History</string>
    <string name="error_network_error">Cannot connect to the Internet.</string>
    <string name="page_error_retry">Retry</string>
    <string name="page_error_back_to_main">Go back</string>
    <string name="menu_clear_all_history">Clear history</string>
    <string name="history_item_deleted">%s removed from history</string>
    <string name="history_items_deleted">%d articles removed from history</string>
    <string name="history_item_delete_undo">Undo</string>
    <string name="dialog_title_clear_history">Clear browsing history</string>
    <string name="dialog_message_clear_history">This will delete all of your browsing history, and close any currently open tabs. Are you sure?</string>
    <string name="dialog_message_clear_history_yes">Yes</string>
    <string name="dialog_message_clear_history_no">No</string>
    <string name="share_via">Share via</string>
    <string name="search_redirect_from">Redirected from %s</string>
    <string name="menu_page_show_tabs">Show tabs</string>
    <string name="menu_page_other_languages">Change language</string>
    <string name="menu_page_find_in_page">Find in page</string>
    <string name="menu_page_content_issues">Content issues</string>
    <string name="menu_page_font_and_theme">Font and theme</string>
    <string name="menu_page_add_to_list">Add to reading list</string>
    <string name="menu_page_share">Share link</string>
    <string name="menu_long_press_open_page">Open</string>
    <string name="menu_long_press_open_in_new_tab">Open in new tab</string>
    <string name="menu_long_press_copy_page">Copy link address</string>
    <string name="menu_text_select_copy">Copy</string>
    <string name="menu_text_select_define">Define</string>
    <string name="menu_text_select_share">Share</string>
    <string name="menu_text_select_edit_here">Edit here</string>
    <string name="nav_item_nearby">Nearby</string>
    <string name="nearby_zoom_to_location">Zoom to a location on the map</string>
    <string name="nearby_osm_license"><![CDATA[&copy; &nbsp;<a href=\"https://www.openstreetmap.org/copyright/\">OpenStreetMap</a> contributors]]></string>
    <string name="last_updated_text">Last updated %s</string>
    <string name="talk_page_link_text">Talk</string>
    <string name="edit_history_link_text">Edit history</string>
    <string name="map_view_link_text">View on a map</string>
    <string name="language_count_link_text">Available in %d other languages</string>
    <string name="content_license_html"><![CDATA[Content is available under <a href=\"%1$s\">CC BY-SA 3.0</a> unless otherwise noted]]></string>
    <string name="edit_save_action_license_logged_in"><![CDATA[By saving, you agree to the <a href="%1$s">Terms of Use</a>, and to irrevocably release your contributions under the <a href="%2$s">CC BY-SA 3.0</a> license.]]></string>
    <string name="edit_save_action_license_anon"><![CDATA[By saving, you agree to the <a href="%1$s">Terms of Use</a>, and to irrevocably release your contributions under the <a href="%2$s/">CC BY-SA 3.0</a> license. Edits will be attributed to the IP address of your device. If you <a href="https://#login">log in</a>, you will have more privacy.]]></string>
    <string name="preference_languages_filter_hint">Search</string>
    <string name="langlinks_filter_hint">Search</string>
    <string name="langlinks_empty">This page is not available in other languages.</string>
    <string name="langlinks_no_match">No languages found matching your query.</string>
    <string name="langlinks_activity_title">Other languages</string>
    <string name="menu_save_changes">Publish changes</string>
    <string name="dialog_saving_in_progress">Publishing…</string>
    <string name="edit_saved_successfully">Edit published!</string>
    <string name="dialog_message_edit_failed">Edit failed!</string>
    <string name="dialog_message_edit_failed_retry">Retry</string>
    <string name="dialog_message_edit_failed_cancel">Cancel</string>
    <string name="dialog_message_leaving_edit">Your changes have not been saved yet. Are you sure you want to leave this page?</string>
    <string name="dialog_message_leaving_edit_leave">Leave</string>
    <string name="dialog_message_leaving_edit_stay">Stay</string>
    <string name="menu_show_toc">Table of Contents</string>
    <string name="search_no_results_found">No results found</string>
    <string name="search_reading_list_no_results">No results found in \"%s\"</string>
    <string name="search_reading_lists_no_results">No results found in reading lists</string>
    <string name="search_history_no_results">No results found in history</string>
    <string name="edit_section_captcha_message">To help protect against automated spam, please enter the words that appear below</string>
    <string name="edit_section_captcha_hint">Repeat words from above</string>
    <string name="title_captcha">Enter CAPTCHA</string>
    <string name="edit_section_captcha_reload">Tap CAPTCHA to reload</string>
    <string name="nav_item_login">Log in to Wikipedia</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_2fa_hint">Two-Factor Authentication Code</string>
    <string name="login_2fa_other_workflow_error_msg">Two-factor authentication required!  Please return to the main activity and log in with your 2FA token, then retry.</string>
    <string name="menu_login">Log in</string>
    <string name="login_activity_title">Log in to Wikipedia</string>
    <string name="login_in_progress_dialog_message">Logging you in…</string>
    <string name="login_success_toast">Logged in successfully!</string>
    <string name="preference_title_logout">Log out</string>
    <string name="toast_logout_complete">Logged out</string>
    <string name="history_empty_title">No recently viewed articles</string>
    <string name="history_empty_message">Track what you\'ve been reading here.</string>
    <string name="search_empty_message">Search and read the free encyclopedia in your language</string>
    <string name="delete_selected_items">Delete selected items</string>
    <string name="wp_stylized"><![CDATA[<big>W</big>IKIPEDI<big>A</big>]]></string>
    <string name="create_account_username_hint">Username</string>
    <string name="login_dont_have_account">Don\'t have an account?</string>
    <string name="login_join_wikipedia">Join Wikipedia</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="create_account_already_have">Already have an account?</string>
    <string name="create_account_activity_title">Create an account</string>
    <string name="dialog_create_account_checking_progress">Verifying</string>
    <string name="create_account_email_hint">Email (Optional)</string>
    <string name="create_account_password_repeat_hint">Repeat password</string>
    <string name="create_account_passwords_mismatch_error">Passwords don\'t match</string>
    <string name="create_account_email_error">Invalid email address</string>
    <string name="create_account_username_error">Invalid characters in username</string>
    <string name="create_account_password_error">The password is invalid</string>
    <string name="create_account_generic_error">Could not create account</string>
    <string name="create_account_next">Next</string>
    <string name="create_account_button">Create account</string>
    <string name="preferences_general_heading">General</string>
    <string name="wikipedia_app_faq">Wikipedia App FAQ</string>
    <string name="zero_charged_verbiage">Free access to Wikipedia is no longer active.</string>
    <string name="zero_warn_when_leaving">Warn if leaving Wikipedia Zero</string>
    <string name="zero_warn_when_leaving_summary">If your mobile operator waives data access charges for the Wikipedia app through a Wikipedia Zero partnership, leaving this setting checked helps you know when you are leaving the Wikipedia app and could be charged.</string>
    <string name="zero_webpage_title">Wikipedia Zero FAQ</string>
    <string name="zero_wikipedia_zero_heading">Wikipedia Zero</string>
    <string name="zero_interstitial_title">Leaving Wikipedia Zero</string>
    <string name="zero_interstitial_leave_app">Data charges may apply. Continue to external site?</string>
    <string name="zero_interstitial_continue">Leave</string>
    <string name="zero_interstitial_cancel">Stay Here</string>
    <string name="zero_learn_more">Your wireless carrier has provided free access to Wikipedia content!</string>
    <string name="zero_learn_more_learn_more">Learn more</string>
    <string name="zero_learn_more_dismiss">Dismiss</string>
    <string name="edit_preview_fetching_dialog_message">Fetching preview…</string>
    <string name="send_feedback">Send app feedback</string>
    <string name="create_account_account_created_toast">Account created!</string>
    <string name="preferences_heading_storage_and_syncing">Storage and syncing</string>
    <string name="preference_title_sync_reading_lists">Sync reading lists</string>
    <string name="preference_summary_sync_reading_lists">Allow Wikimedia to sync your reading lists when you log in</string>
    <string name="preferences_privacy_settings_heading"></string>
    <string name="preference_title_eventlogging_opt_in">Send usage reports</string>
    <string name="settings_item_preferences">Settings</string>
    <string name="about_libraries_heading">Libraries used</string>
    <string name="about_translators_heading">Translators</string>
    <string name="about_translators_translatewiki"><![CDATA[This app was translated by the volunteer translators at <a href="https://translatewiki.net">translatewiki.net</a>.]]></string>
    <string name="about_app_license_heading">License</string>
    <string name="about_wmf"><![CDATA[A product of the <a href="http://m.wikimediafoundation.org/wiki/Home">Wikimedia Foundation</a>]]></string>
    <string name="nav_item_donate">Support Wikipedia</string>
    <string name="feed_configure_activity_title">Customize the feed</string>
    <string name="offline_compilations_title">Offline Library</string>
</resources>