<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="192dp"
    android:orientation="vertical"
    android:background="@color/base20">

    <LinearLayout
        android:id="@+id/explore_overflow_account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/explore_overflow_account_avatar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@null"
            android:visibility="gone"
            app:srcCompat="@drawable/user_avatar" />

        <TextView
            android:id="@+id/explore_overflow_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="Sample account name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="?attr/paper_color">

        <TextView
            android:id="@+id/explore_overflow_configure_cards"
            style="@style/OverflowMenuItem"
            android:text="@string/feed_configure_activity_title"/>

        <TextView
            android:id="@+id/explore_overflow_compilations"
            style="@style/OverflowMenuItem"
            android:text="@string/offline_compilations_title"/>

        <TextView
            android:id="@+id/explore_overflow_settings"
            style="@style/OverflowMenuItem"
            android:text="@string/settings_item_preferences"/>

        <TextView
            android:id="@+id/explore_overflow_donate"
            style="@style/OverflowMenuItem"
            android:text="@string/nav_item_donate"/>

        <TextView
            android:id="@+id/explore_overflow_log_out"
            style="@style/OverflowMenuItem"
            android:text="@string/preference_title_logout"
            android:textColor="@color/red50"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>