<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/about_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="?attr/paper_color"
            android:elevation="4dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/about_logo_image"
                android:layout_width="88dp"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@null"
                android:src="@drawable/wikipedia_globe_263dp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="22dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@null"
                android:src="@drawable/wp_wordmark"
                android:tint="?attr/chart_shade1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/about_version_text"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:textColor="?attr/material_theme_primary_color"
                android:textIsSelectable="true"
                android:visibility="gone"
                tools:text="2.x-sample-version" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="?attr/material_theme_primary_color"
                android:text="@string/hakki" />

            <org.wikipedia.views.AppTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:text="@string/mesaju"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true"
                android:lineSpacingExtra="6sp"
                android:textColor="?attr/material_theme_secondary_color"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/about_translators_heading"
                android:textColor="?attr/material_theme_primary_color"
                android:textSize="16sp"
                android:visibility="gone" />

            <org.wikipedia.views.AppTextView
                android:id="@+id/about_translators"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:lineSpacingExtra="6sp"
                android:text="@string/about_translators_translatewiki"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/material_theme_secondary_color"
                android:textIsSelectable="true"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/material_theme_primary_color"
                android:text="@string/about_libraries_heading"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp" />

            <org.wikipedia.views.AppTextView
                android:id="@+id/activity_about_libraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:text="@string/libraries_list"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true"
                android:lineSpacingExtra="6sp"
                android:textColor="?attr/material_theme_secondary_color"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="?attr/material_theme_primary_color"
                android:text="@string/about_app_license_heading"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp" />

            <org.wikipedia.views.AppTextView
                android:id="@+id/about_app_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app_license"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textIsSelectable="true"
                android:lineSpacingExtra="6sp"
                android:textColor="?attr/material_theme_secondary_color" />

            <TextView
                android:id="@+id/send_feedback_text"
                style="@style/TransparentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/send_feedback"
                android:textColor="?attr/colorAccent" />

        </LinearLayout>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:contentDescription="@null"
            android:tint="?attr/secondary_text_color"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_wmf_logo" />

        <org.wikipedia.views.AppTextView
            android:id="@+id/about_wmf"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/about_wmf"
            android:textColor="?attr/material_theme_secondary_color"
            android:textIsSelectable="true"
            android:textSize="12sp"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
